--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -25,17 +25,12 @@
 
 body {
     background-color: var(--color-background);
+    padding: var(--spacing-large) var(--spacing-normal);
 }
 
 main, footer {
     max-width: 1200px;
     margin: 0 auto;
-    padding: var(--spacing-normal);
-}
-
-footer {
-    margin-bottom: var(--spacing-large);
-    padding-bottom: var(--spacing-large);
 }
 
 h1, h2, h3, h4, h5, h6 {
